// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventContainer component renders correctly with a text event 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#696A6B",
      "borderBottomWidth": 0.5,
      "width": 750,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingTop": 12,
        },
        false,
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
        }
      }
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
            "height": 43,
            "justifyContent": "space-between",
            "paddingLeft": 10,
            "width": 220,
          },
          false,
        ]
      }
    >
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#7ED321",
              "fontSize": 14,
              "fontWeight": "600",
              "marginBottom": -2,
              "marginTop": -3,
            }
          }
        >
          Test Name
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 10,
            }
          }
        >
          @
          applicaster
        </Text>
      </View>
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 12,
            }
          }
        >
          August 4
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "position": "absolute",
          "right": 9,
          "top": 9,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "InstagramIcon",
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#FFFFFF",
        "fontSize": 14,
        "lineHeight": 18,
        "paddingBottom": 12,
        "paddingHorizontal": 12,
        "paddingTop": 17,
      }
    }
  >
    Low. Tarmac T2 , CasCam, SPC LCAs.
    Thanks 
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#7ED321",
        }
      }
    >
      @azpinstalls
    </Text>
     for the work, parts, advice and setup.
    
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#7ED321",
        }
      }
    >
      #brz
    </Text>
     
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#7ED321",
        }
      }
    >
      #gt86
    </Text>
     
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#7ED321",
        }
      }
    >
      #ft86
    </Text>
    
  </Text>
</View>
`;

exports[`EventContainer component renders correctly with an image event 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#696A6B",
      "borderBottomWidth": 0.5,
      "width": 750,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "paddingHorizontal": 12,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "transparent",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 750,
          "zIndex": 2,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
        }
      }
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
            "height": 43,
            "justifyContent": "space-between",
            "paddingLeft": 10,
            "width": 220,
          },
          false,
        ]
      }
    >
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#7ED321",
              "fontSize": 14,
              "fontWeight": "600",
              "marginBottom": -2,
              "marginTop": -3,
            }
          }
        >
          Test Name
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 10,
            }
          }
        >
          @
          applicaster
        </Text>
      </View>
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 12,
            }
          }
        >
          August 4
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "position": "absolute",
          "right": 9,
          "top": 9,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "InstagramIcon",
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "height": 590.625,
        "width": 750,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
    />
    <BVLinearGradient
      colors={
        Array [
          3003121664,
          0,
        ]
      }
      end={undefined}
      locations={null}
      start={undefined}
      style={
        Object {
          "height": 130,
        }
      }
    />
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#FFFFFF",
        "fontSize": 14,
        "lineHeight": 18,
        "paddingBottom": 12,
        "paddingHorizontal": 12,
        "paddingTop": 17,
      }
    }
  >
    Low. Tarmac T2 , CasCam, SPC LCAs.
    Thanks 
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#7ED321",
        }
      }
    >
      @azpinstalls
    </Text>
     for the work, parts, advice and setup.
    
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#7ED321",
        }
      }
    >
      #brz
    </Text>
     
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#7ED321",
        }
      }
    >
      #gt86
    </Text>
     
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#7ED321",
        }
      }
    >
      #ft86
    </Text>
    
  </Text>
</View>
`;
